# barq

./: CMakeLists.txt  README.md  package.xml
include/barq/: barq.hpp  barq_pcl.hpp
src/: barq.cpp
