<?xml version="1.0"?>
<package format="3">
  <name>barq</name>
  <version>1.0.0</version>
  <description>BARQ (Burst Access Reader Queue) - Ultra-fast shared memory transport library</description>
  <maintainer email="leonardonels@todo.todo">leonardonels</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
